Few kms tests - fail - Test assertion failure function __intel_buf_init, Failed assertion: bo_size >= size:
Err
Starting subtest: basic
(kms_frontbuffer_tracking:1340) intel_bufops-CRITICAL: Test assertion failure function __intel_buf_init, file ../../../usr/src/igt-gpu-tools/lib/intel_bufops.c:904:
(kms_frontbuffer_tracking:1340) intel_bufops-CRITICAL: Failed assertion: bo_size >= size
Subtest basic failed.