lib/igt_draw: Fix the usage of FB width & height

Aliging to xe default alignment is causing the mismatch in derived
height from framebuffer size (height = size/ stride). Instead use
the original width & height from the created fb.

V2: - Fix issues in CI

Fixes: https://gitlab.freedesktop.org/drm/xe/kernel/-/issues/608
Cc: Zbigniew Kempczyński <zbigniew.kempczynski@intel.com>
Cc: Juha-Pekka Heikkila <juhapekka.heikkila@gmail.com>
Signed-off-by: Bhanuprakash Modem <bhanuprakash.modem@intel.com>
Reviewed-by: Jeevan B <jeevan.b@intel.com>